Closed Bug 412701 Opened 18 years ago Closed 18 years ago

Crash in nsCSSFrameConstructor::RestyleEvent::HandleEvent when closing

Categories

(Thunderbird :: General, defect)

defect
Not set
critical

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: marcia, Unassigned)

References

Details

(Keywords: crash, regression, verified1.8.1.12, Whiteboard: Patch in bug 279505)

Attachments

(1 file)

Seen using version 2.0.0.12pre (20080116) on Win Vista. Tomcat has also seen this crash on XP. I have not seen any crashes on Tbird in some time. Has not been seen on Mac yet. STR: 1. Exit Thunderbird by clicking on the "X". Also seen when trying to apply a software update. TB ID: 40292421, 40284309, and 40255118
Flags: blocking1.8.1.12?
Keywords: regression
Severity: normal → critical
my talkback stack Incident ID: 40292139 Stack Signature nsCSSFrameConstructor::RestyleEvent::HandleEvent 721f001a Product ID Thunderbird2 Build ID 2008011503 Trigger Time 2008-01-16 15:26:27.0 Platform Win32 Operating System Windows NT 5.2 build 3790 Module thunderbird.exe + (0022acbd) URL visited did only apply a update User Comments Since Last Crash 31426 sec Total Uptime 31426 sec Trigger Reason Access violation Source File, Line No. e:/builds/tinderbox/Tb-Mozilla1.8/WINNT_5.0_Depend/mozilla/layout/base/nsCSSFrameConstructor.cpp, line 14256 Stack Trace nsCSSFrameConstructor::RestyleEvent::HandleEvent [mozilla/layout/base/nsCSSFrameConstructor.cpp, line 14256] HandleRestyleEvent [mozilla/layout/base/nsCSSFrameConstructor.cpp, line 14281]
possibly related, if this is core code: http://forums.macrumors.com/showthread.php?t=415684. Part of the stack in that post is nsCSSFrameConstructor. Incidentally, I had kernal panic yesterday on the mac mini running Leopard, but sadly there is no log in the directory.
bz: help! Easier step-to-reproduce, borrowed from bug 412708 (which I suspect is a dupe): open Thunderbird, send an email, close Thunderbird. 100% crash for me on Win/XP with 2008011503, 0% crash with 2008011404. Despite bug 412708's attempt to blame it on my checkin, the only Tbird one in that range, I'd much rather blame it on your bug 396613, bug 394337, bug 314776 checkin, the only one to mention stylesheets ;)
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → DUPLICATE
Flags: blocking1.8.1.12?
Reopening bug and making it depend on the old bug rather than duping too it. As far as Thunderbird is concerned this is a new regression and we need to track it as such.
Status: RESOLVED → REOPENED
Depends on: 279505
Flags: wanted1.8.1.x+
Flags: blocking1.8.1.12+
Resolution: DUPLICATE → ---
Whiteboard: Patch in bug 279505
Blocks: 412708
Attached file CrashReporter dump
I just got this crash on Mac OS X. Same scenario as described here... I sent an email then immediately tried to close the window right after it sent.
Oh, running version 2.0.0.12pre (20080117)
Seems to be fixed in Branch daily build of 19 Jan. Thanks to whomever it was who worked the magic.
(In reply to comment #8) > Oh, running version 2.0.0.12pre (20080117) Should be fixed in the latest nightly. I'm going to resolve this bug as FIXED based on comment 9. If you can still reproduce this crash, please reopen. Thanks everyone!
Status: REOPENED → RESOLVED
Closed: 18 years ago18 years ago
Keywords: fixed1.8.1.12
Resolution: --- → FIXED
Mozilla/5.0 (Macintosh; U; Intel Mac OS X; en-US; rv:1.8.1.12pre) Gecko/20080119 Thunderbird/2.0.0.12pre Mnenhy/0.7.5.0 ID:2008011906 Yes, it's fixed and makes branch nightly builds usable again. Thanks.
Status: RESOLVED → VERIFIED
OS: Windows Vista → All
Hardware: PC → All
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: