Taking bug 412701 attachment 279505 for Camino 1.6b2 as a one-fix-only emergency followup to 1.6b1: Crash in pop-up window on parent.close() due to double free [@ nsCSSFrameConstructor::RestyleEvent::HandleEvent].  r=bz sr=bz