mozilla/layout/base/nsPresShell.cpp
@@ -1070,6 +1070,8 @@ class PresShell : public nsIPresShell_MOZILLA_1_8_BRANCH2, public nsIViewObserve
                   public nsSupportsWeakReference
 {
 public:
+  friend class nsIPresShell;
+
   PresShell();
 
   NS_DECL_AND_IMPL_ZEROING_OPERATOR_NEW
@@ -5685,6 +5687,9 @@ PresShell::ReconstructFrames(void)
 void
 nsIPresShell::ReconstructStyleDataInternal()
 {
+  if (NS_UNLIKELY(NS_STATIC_CAST(PresShell*, this)->mIsDestroying))
+    return;
+
   mStylesHaveChanged = PR_FALSE;
 
   if (!mDidInitialReflow) {
@@ -5708,6 +5713,9 @@ nsIPresShell::ReconstructStyleDataInternal()
 void
 nsIPresShell::ReconstructStyleDataExternal()
 {
+  if (NS_UNLIKELY(NS_STATIC_CAST(PresShell*, this)->mIsDestroying))
+    return;
+
   ReconstructStyleDataInternal();
   FlushPendingNotifications(Flush_Style);
 }
